lexer.c
/* Generated by re2c 0.14.3 on Fri Oct 27 01:17:39 2017 */
#line 1 "lexer.re2c"
#include "lexer.h"

#define DECL_TOK_STR(Tok) #Tok,
const char *lexer_token_strings[] = {
    LEXER_ALL_TOKENS(DECL_TOK_STR)
};

#define TOK(Tok) return TOK_##Tok

int lexer_next_token(struct lexer_ctx *ctx, char **begin) {
    char *marker = (void *)0;
next_token_start:;
    *begin = ctx->cursor;

#line 18 "lexer.c"
{
	char yych;
	unsigned int yyaccept = 0;

	yych = *ctx->cursor;
	switch (yych) {
	case 0x00:	goto yy3;
	case '\t':
	case '\v':
	case '\r':
	case ' ':	goto yy7;
	case '\n':	goto yy8;
	case '!':	goto yy10;
	case '%':	goto yy12;
	case '&':	goto yy14;
	case '(':	goto yy16;
	case ')':	goto yy18;
	case '*':	goto yy20;
	case '+':	goto yy22;
	case ',':	goto yy24;
	case '-':	goto yy26;
	case '/':	goto yy28;
	case '0':	goto yy30;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy32;
	case ':':	goto yy34;
	case ';':	goto yy36;
	case '<':	goto yy38;
	case '=':	goto yy40;
	case '>':	goto yy42;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'g':
	case 'h':
	case 'j':
	case 'k':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 't':
	case 'u':
	case 'v':
	case 'x':
	case 'y':
	case 'z':	goto yy44;
	case '[':	goto yy46;
	case ']':	goto yy48;
	case '^':	goto yy50;
	case 'e':	goto yy52;
	case 'f':	goto yy53;
	case 'i':	goto yy54;
	case 'l':	goto yy55;
	case 'm':	goto yy56;
	case 's':	goto yy57;
	case 'w':	goto yy58;
	case '|':	goto yy59;
	case '~':	goto yy61;
	default:	goto yy5;
	}
yy2:
#line 29 "lexer.re2c"
	{ goto next_token_start; }
#line 119 "lexer.c"
yy3:
	++ctx->cursor;
#line 27 "lexer.re2c"
	{ TOK(END); }
#line 124 "lexer.c"
yy5:
	++ctx->cursor;
#line 26 "lexer.re2c"
	{ TOK(ERR); }
#line 129 "lexer.c"
yy7:
	yych = *++ctx->cursor;
	goto yy143;
yy8:
	++ctx->cursor;
#line 35 "lexer.re2c"
	{
        ++ctx->line;
        goto next_token_start;
    }
#line 140 "lexer.c"
yy10:
	++ctx->cursor;
	switch ((yych = *ctx->cursor)) {
	case '=':	goto yy140;
	default:	goto yy11;
	}
yy11:
#line 59 "lexer.re2c"
	{ TOK(NOT); }
#line 150 "lexer.c"
yy12:
	++ctx->cursor;
#line 51 "lexer.re2c"
	{ TOK(MOD); }
#line 155 "lexer.c"
yy14:
	++ctx->cursor;
	switch ((yych = *ctx->cursor)) {
	case '&':	goto yy138;
	default:	goto yy15;
	}
yy15:
#line 55 "lexer.re2c"
	{ TOK(AND_BW); }
#line 165 "lexer.c"
yy16:
	++ctx->cursor;
#line 64 "lexer.re2c"
	{ TOK(LPAREN); }
#line 170 "lexer.c"
yy18:
	++ctx->cursor;
#line 65 "lexer.re2c"
	{ TOK(RPAREN); }
#line 175 "lexer.c"
yy20:
	++ctx->cursor;
#line 49 "lexer.re2c"
	{ TOK(MUL); }
#line 180 "lexer.c"
yy22:
	++ctx->cursor;
#line 47 "lexer.re2c"
	{ TOK(PLUS); }
#line 185 "lexer.c"
yy24:
	++ctx->cursor;
#line 61 "lexer.re2c"
	{ TOK(COMMA); }
#line 190 "lexer.c"
yy26:
	++ctx->cursor;
#line 48 "lexer.re2c"
	{ TOK(MINUS); }
#line 195 "lexer.c"
yy28:
	yyaccept = 0;
	yych = *(marker = ++ctx->cursor);
	switch (yych) {
	case '/':	goto yy131;
	default:	goto yy29;
	}
yy29:
#line 50 "lexer.re2c"
	{ TOK(DIV); }
#line 206 "lexer.c"
yy30:
	yyaccept = 1;
	yych = *(marker = ++ctx->cursor);
	switch (yych) {
	case 'B':
	case 'b':	goto yy124;
	case 'X':
	case 'x':	goto yy120;
	default:	goto yy123;
	}
yy31:
#line 82 "lexer.re2c"
	{ TOK(OCT); }
#line 220 "lexer.c"
yy32:
	++ctx->cursor;
	yych = *ctx->cursor;
	goto yy119;
yy33:
#line 83 "lexer.re2c"
	{ TOK(DEC); }
#line 228 "lexer.c"
yy34:
	++ctx->cursor;
#line 62 "lexer.re2c"
	{ TOK(COLON); }
#line 233 "lexer.c"
yy36:
	++ctx->cursor;
#line 63 "lexer.re2c"
	{ TOK(SEMICOLON); }
#line 238 "lexer.c"
yy38:
	++ctx->cursor;
	switch ((yych = *ctx->cursor)) {
	case '<':	goto yy114;
	case '=':	goto yy116;
	default:	goto yy39;
	}
yy39:
#line 43 "lexer.re2c"
	{ TOK(LT); }
#line 249 "lexer.c"
yy40:
	++ctx->cursor;
	switch ((yych = *ctx->cursor)) {
	case '=':	goto yy112;
	default:	goto yy41;
	}
yy41:
#line 40 "lexer.re2c"
	{ TOK(ASSIGN); }
#line 259 "lexer.c"
yy42:
	++ctx->cursor;
	switch ((yych = *ctx->cursor)) {
	case '=':	goto yy110;
	case '>':	goto yy108;
	default:	goto yy43;
	}
yy43:
#line 44 "lexer.re2c"
	{ TOK(GT); }
#line 270 "lexer.c"
yy44:
	++ctx->cursor;
	yych = *ctx->cursor;
	goto yy66;
yy45:
#line 80 "lexer.re2c"
	{ TOK(IDENT); }
#line 278 "lexer.c"
yy46:
	++ctx->cursor;
#line 66 "lexer.re2c"
	{ TOK(LBRACKET); }
#line 283 "lexer.c"
yy48:
	++ctx->cursor;
#line 67 "lexer.re2c"
	{ TOK(RBRACKET); }
#line 288 "lexer.c"
yy50:
	++ctx->cursor;
#line 58 "lexer.re2c"
	{ TOK(XOR_BW); }
#line 293 "lexer.c"
yy52:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'l':	goto yy101;
	default:	goto yy66;
	}
yy53:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'n':	goto yy99;
	default:	goto yy66;
	}
yy54:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'f':	goto yy87;
	case 'm':	goto yy89;
	case 'n':	goto yy90;
	default:	goto yy66;
	}
yy55:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'e':	goto yy84;
	default:	goto yy66;
	}
yy56:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'o':	goto yy78;
	default:	goto yy66;
	}
yy57:
	yych = *++ctx->cursor;
	switch (yych) {
	case 't':	goto yy72;
	default:	goto yy66;
	}
yy58:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'h':	goto yy67;
	default:	goto yy66;
	}
yy59:
	++ctx->cursor;
	switch ((yych = *ctx->cursor)) {
	case '|':	goto yy63;
	default:	goto yy60;
	}
yy60:
#line 57 "lexer.re2c"
	{ TOK(OR_BW); }
#line 347 "lexer.c"
yy61:
	++ctx->cursor;
#line 60 "lexer.re2c"
	{ TOK(NOT_BW); }
#line 352 "lexer.c"
yy63:
	++ctx->cursor;
#line 56 "lexer.re2c"
	{ TOK(OR); }
#line 357 "lexer.c"
yy65:
	++ctx->cursor;
	yych = *ctx->cursor;
yy66:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy65;
	default:	goto yy45;
	}
yy67:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'i':	goto yy68;
	default:	goto yy66;
	}
yy68:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'l':	goto yy69;
	default:	goto yy66;
	}
yy69:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'e':	goto yy70;
	default:	goto yy66;
	}
yy70:
	++ctx->cursor;
	switch ((yych = *ctx->cursor)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy65;
	default:	goto yy71;
	}
yy71:
#line 77 "lexer.re2c"
	{ TOK(KW_WHILE); }
#line 517 "lexer.c"
yy72:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'r':	goto yy73;
	default:	goto yy66;
	}
yy73:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'u':	goto yy74;
	default:	goto yy66;
	}
yy74:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'c':	goto yy75;
	default:	goto yy66;
	}
yy75:
	yych = *++ctx->cursor;
	switch (yych) {
	case 't':	goto yy76;
	default:	goto yy66;
	}
yy76:
	++ctx->cursor;
	switch ((yych = *ctx->cursor)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy65;
	default:	goto yy77;
	}
yy77:
#line 70 "lexer.re2c"
	{ TOK(KW_STRUCT); }
#line 613 "lexer.c"
yy78:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'd':	goto yy79;
	default:	goto yy66;
	}
yy79:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'u':	goto yy80;
	default:	goto yy66;
	}
yy80:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'l':	goto yy81;
	default:	goto yy66;
	}
yy81:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'e':	goto yy82;
	default:	goto yy66;
	}
yy82:
	++ctx->cursor;
	switch ((yych = *ctx->cursor)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy65;
	default:	goto yy83;
	}
yy83:
#line 68 "lexer.re2c"
	{ TOK(KW_MODULE); }
#line 709 "lexer.c"
yy84:
	yych = *++ctx->cursor;
	switch (yych) {
	case 't':	goto yy85;
	default:	goto yy66;
	}
yy85:
	++ctx->cursor;
	switch ((yych = *ctx->cursor)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy65;
	default:	goto yy86;
	}
yy86:
#line 72 "lexer.re2c"
	{ TOK(KW_LET); }
#line 787 "lexer.c"
yy87:
	++ctx->cursor;
	switch ((yych = *ctx->cursor)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy65;
	default:	goto yy88;
	}
yy88:
#line 74 "lexer.re2c"
	{ TOK(KW_IF); }
#line 859 "lexer.c"
yy89:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'p':	goto yy94;
	default:	goto yy66;
	}
yy90:
	++ctx->cursor;
	switch ((yych = *ctx->cursor)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy65;
	case 't':	goto yy92;
	default:	goto yy91;
	}
yy91:
#line 73 "lexer.re2c"
	{ TOK(KW_IN); }
#line 937 "lexer.c"
yy92:
	++ctx->cursor;
	switch ((yych = *ctx->cursor)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy65;
	default:	goto yy93;
	}
yy93:
#line 78 "lexer.re2c"
	{ TOK(KW_INT); }
#line 1009 "lexer.c"
yy94:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'o':	goto yy95;
	default:	goto yy66;
	}
yy95:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'r':	goto yy96;
	default:	goto yy66;
	}
yy96:
	yych = *++ctx->cursor;
	switch (yych) {
	case 't':	goto yy97;
	default:	goto yy66;
	}
yy97:
	++ctx->cursor;
	switch ((yych = *ctx->cursor)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy65;
	default:	goto yy98;
	}
yy98:
#line 69 "lexer.re2c"
	{ TOK(KW_IMPORT); }
#line 1099 "lexer.c"
yy99:
	++ctx->cursor;
	switch ((yych = *ctx->cursor)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy65;
	default:	goto yy100;
	}
yy100:
#line 71 "lexer.re2c"
	{ TOK(KW_FN); }
#line 1171 "lexer.c"
yy101:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'i':	goto yy102;
	case 's':	goto yy103;
	default:	goto yy66;
	}
yy102:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'f':	goto yy106;
	default:	goto yy66;
	}
yy103:
	yych = *++ctx->cursor;
	switch (yych) {
	case 'e':	goto yy104;
	default:	goto yy66;
	}
yy104:
	++ctx->cursor;
	switch ((yych = *ctx->cursor)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy65;
	default:	goto yy105;
	}
yy105:
#line 76 "lexer.re2c"
	{ TOK(KW_ELSE); }
#line 1262 "lexer.c"
yy106:
	++ctx->cursor;
	switch ((yych = *ctx->cursor)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy65;
	default:	goto yy107;
	}
yy107:
#line 75 "lexer.re2c"
	{ TOK(KW_ELIF); }
#line 1334 "lexer.c"
yy108:
	++ctx->cursor;
#line 53 "lexer.re2c"
	{ TOK(RSH); }
#line 1339 "lexer.c"
yy110:
	++ctx->cursor;
#line 46 "lexer.re2c"
	{ TOK(GTEQ); }
#line 1344 "lexer.c"
yy112:
	++ctx->cursor;
#line 41 "lexer.re2c"
	{ TOK(EQ); }
#line 1349 "lexer.c"
yy114:
	++ctx->cursor;
#line 52 "lexer.re2c"
	{ TOK(LSH); }
#line 1354 "lexer.c"
yy116:
	++ctx->cursor;
#line 45 "lexer.re2c"
	{ TOK(LTEQ); }
#line 1359 "lexer.c"
yy118:
	++ctx->cursor;
	yych = *ctx->cursor;
yy119:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy118;
	default:	goto yy33;
	}
yy120:
	yych = *++ctx->cursor;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy128;
	default:	goto yy121;
	}
yy121:
	ctx->cursor = marker;
	switch (yyaccept) {
	case 0: 	goto yy29;
	case 1: 	goto yy31;
	default:	goto yy135;
	}
yy122:
	++ctx->cursor;
	yych = *ctx->cursor;
yy123:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':	goto yy122;
	default:	goto yy31;
	}
yy124:
	yych = *++ctx->cursor;
	switch (yych) {
	case '0':
	case '1':	goto yy125;
	default:	goto yy121;
	}
yy125:
	++ctx->cursor;
	yych = *ctx->cursor;
	switch (yych) {
	case '0':
	case '1':	goto yy125;
	default:	goto yy127;
	}
yy127:
#line 81 "lexer.re2c"
	{ TOK(BIN); }
#line 1444 "lexer.c"
yy128:
	++ctx->cursor;
	yych = *ctx->cursor;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy128;
	default:	goto yy130;
	}
yy130:
#line 84 "lexer.re2c"
	{ TOK(HEX); }
#line 1476 "lexer.c"
yy131:
	++ctx->cursor;
	yych = *ctx->cursor;
	switch (yych) {
	case 0x00:	goto yy133;
	case '\n':	goto yy136;
	default:	goto yy131;
	}
yy133:
	yyaccept = 2;
	marker = ++ctx->cursor;
	yych = *ctx->cursor;
	switch (yych) {
	case 0x00:	goto yy133;
	case '\n':	goto yy136;
	default:	goto yy131;
	}
yy135:
#line 30 "lexer.re2c"
	{ TOK(END); }
#line 1497 "lexer.c"
yy136:
	++ctx->cursor;
#line 31 "lexer.re2c"
	{
        ++ctx->line;
        goto next_token_start;
    }
#line 1505 "lexer.c"
yy138:
	++ctx->cursor;
#line 54 "lexer.re2c"
	{ TOK(AND); }
#line 1510 "lexer.c"
yy140:
	++ctx->cursor;
#line 42 "lexer.re2c"
	{ TOK(NEQ); }
#line 1515 "lexer.c"
yy142:
	++ctx->cursor;
	yych = *ctx->cursor;
yy143:
	switch (yych) {
	case '\t':
	case '\v':
	case '\r':
	case ' ':	goto yy142;
	default:	goto yy2;
	}
}
#line 85 "lexer.re2c"

}
